# TinyRender

./: CMakeLists.txt  README.md  cornel.JSON  cornel2.JSON  sphere copy.JSON  sphere.JSON  test.JSON
include/SDL/include/SDL3/: SDL.h  SDL_oldnames.h
include/imgui/: imgui.h
include/nlohmann/: json.hpp
include/nuklear/: nuklear.h  nuklear_sdl_renderer.h
include/thread/: mingw.thread.h
output/: output.tga
src/: Texture.cpp  Texture.h  Triangle.cpp  Triangle.hpp  main.cpp  objects_loader.cpp  objects_loader.h  rasterizer.cpp  rasterizer.h
src/Sence/: Camera.cpp  Camera.h  Light.h  Model.cpp  Model.h
src/Shader/: Shader.cpp  Shader.h
src/Utils/: json_loader.cpp  json_loader.h  objects_loader.cpp  objects_loader.h  ui.cpp  ui.h
